--- a/barbearia/index.html
+++ b/barbearia/index.html
@@ -22,11 +22,16 @@
     </header>
     <!-- Seção principal com chamada para ação -->
     <main>
-        <section>
+        <section id="principal">
             <h1>Bem-vindo à Nossa Barbearia</h1>
             <p>Agende seu corte de cabelo, barba ou sobrancelha online!</p>
             <a href="agendamento.html" class="btn">Agendar Agora</a>
         </section>
     </main>
+    <!-- Rodapé -->
+     <footer>
+        <p>&copy; 2024 Barbearia - Todos os direitos reservados</p>
+     </footer>
+     <script src="script.js"></script>
 </body>
 </html>
