--- a/barbearia/index.html
+++ b/barbearia/index.html
@@ -30,7 +30,7 @@
     </main>
     <!-- Rodapé -->
      <footer>
-        <p>&copy; 2024 Barbearia - Todos os direitos reservados</p>
+        <p>&copy; 2024 Barbearia - Desenvolvedor José Gean</p>
      </footer>
      <script src="script.js"></script>
 </body>
